welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: not found: value litMessafe
	} else if(litMessafe=="B"){
                  ^BDRBuggle:7: error: not found: value litMessafe
	} else if(litMessafe=="C"){avance();avance();avance();}
                  ^